--- a/QuickjobDTO/pom.xml
+++ b/QuickjobDTO/pom.xml
@@ -7,11 +7,19 @@
     <groupId>co.edu.uco.quickjob</groupId>
     <artifactId>QuickjobDTO</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <name>QuickjobDTO</name>
+    <description>Componente que ofrece los objetos de transferencia de datos con el fin de intercambiar datos entre el componente de API y el componente de Service</description>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>co.edu.uco.quickjob</groupId>
+            <artifactId>QuickjobCrosscutting</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
