--- a/QuickjobRepository/pom.xml
+++ b/QuickjobRepository/pom.xml
@@ -7,11 +7,25 @@
     <groupId>co.edu.uco.quickjob</groupId>
     <artifactId>QuickjobRepository</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>QuickjobRepository</name>
+    <description>Componente que ofrece los mecanismos de acceso a datos del proyecto Quickjob</description>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>co.edu.uco.quickjob</groupId>
+            <artifactId>QuickjobCrosscutting</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>co.edu.uco.quickjob</groupId>
+            <artifactId>QuickjobEntity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
