--- a/QuickjobService/pom.xml
+++ b/QuickjobService/pom.xml
@@ -7,11 +7,34 @@
     <groupId>co.edu.uco.quickjob</groupId>
     <artifactId>QuickjobService</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <name>QuickjobService</name>
+    <description>Componente encargado de garantizar el cumplimiento de toda la logica de negocio de la aplicación, asegurando que el dominio este protegido de accesos no autorizados.</description>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>co.edu.uco.quickjob</groupId>
+            <artifactId>QuickjobCrosscutting</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>co.edu.uco.quickjob</groupId>
+            <artifactId>QuickjobRepository</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>co.edu.uco.quickjob</groupId>
+            <artifactId>QuickjobEntity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>co.edu.uco.quickjob</groupId>
+            <artifactId>QuickjobDTO</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
