--- a/Crosscutting/pom.xml
+++ b/Crosscutting/pom.xml
@@ -3,15 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>co.edu.uco.quickjob</groupId>
-    <artifactId>QuickjobCrosscutting</artifactId>
+
+    <groupId>co.edu.uco</groupId>
+    <artifactId>Crosscutting</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>QuickjobCrosscutting</name>
-    <description>Componente que ofrece caracteristicas aspectuales que pueden ser utilizadas por cualquier componentes de la aplicación Publiuco</description>
+    <name>Crosscutting</name>
+    <description>Componente que ofrece caracteristicas aspectuales que pueden ser utilizadas de forma general por cualquier proyecto construido en Java versión 20.</description>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 </project>
