--- a/QuickjobCrosscutting/pom.xml
+++ b/QuickjobCrosscutting/pom.xml
@@ -7,11 +7,18 @@
     <artifactId>QuickjobCrosscutting</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>QuickjobCrosscutting</name>
-    <description>Componente que ofrece caracteristicas aspectuales que pueden ser utilizadas por cualquier componentes de la aplicación Publiuco</description>
+    <description>Componente que ofrece caracteristicas aspectuales que pueden ser utilizadas por cualquier componentes de la aplicación Quickjob</description>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>co.edu.uco</groupId>
+            <artifactId>Crosscutting</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
