--- a/QuickjobDTO/pom.xml
+++ b/QuickjobDTO/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>QuickjobDTO</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>QuickjobDTO</name>
-    <description>Componente que ofrece los objetos de transferencia de datos con el fin de intercambiar datos entre el componente de API y el componente de Service</description>
+    <description>Componente que ofrece los objetos de transferencia de datos con el fin de intercambiar datos entre el componente de API y el componente de Service.</description>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
