--- a/QuickjobRepository/pom.xml
+++ b/QuickjobRepository/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>QuickjobRepository</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>QuickjobRepository</name>
-    <description>Componente que ofrece los mecanismos de acceso a datos del proyecto Quickjob</description>
+    <description>Componente que ofrece los mecanismos de acceso a datos del proyecto Quickjob.</description>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
