--- a/QuickjobApi/src/main/resources/application.properties
+++ b/QuickjobApi/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost/quickjobv2
+spring.datasource.username=postgres
+spring.datasource.password=Nomic230s
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
 
