--- a/QuickjobCrosscutting/pom.xml
+++ b/QuickjobCrosscutting/pom.xml
@@ -20,5 +20,11 @@
             <artifactId>Crosscutting</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>10.1.8</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
