--- a/QuickjobEntity/pom.xml
+++ b/QuickjobEntity/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>QuickjobCrosscutting</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
