--- a/QuickjobService/pom.xml
+++ b/QuickjobService/pom.xml
@@ -35,6 +35,10 @@
             <artifactId>QuickjobDTO</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
-
 </project>
